ex5/testdata/typechecker/ok/NestedVars1.java
class MainClass{
    public static void main(String[] args){
        {
            int x;
            x = 5;
        }
        int x;
        x = 4;
        System.out.println(x);
    }
}

