ex5/testdata/typechecker/error/ClassTest-err2.java
class ClassTest {
	public static void main(String[] a){
            A x;
            x = true; // TE
	}
}

class A {
}

